[gd_scene load_steps=4 format=3 uid="uid://x8u6jf7mpp37"]

[ext_resource type="Script" uid="uid://b8slu6jggq1bu" path="res://scenes/ui/character_detail_panel.gd" id="1_0lqnx"]
[ext_resource type="PackedScene" uid="uid://b26kadxoregwn" path="res://scenes/ui/attribute_status_bar.tscn" id="2_d8pxp"]
[ext_resource type="PackedScene" uid="uid://1apx83ubxdnv" path="res://scenes/ui/attribute_label.tscn" id="2_xk3ex"]

[node name="CharacterDetailPanel" type="Control"]
z_index = 128
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0lqnx")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.501961)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -181.0
offset_right = 300.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CharacterNameLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "角色名称"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
text = "X"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ContentContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
layout_mode = 2

[node name="CharacterSpriteContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0

[node name="CharacterSprite" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/CharacterSpriteContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "生命值"

[node name="HealthBar" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("2_d8pxp")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "魔法值"

[node name="ManaBar" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer" instance=ExtResource("2_d8pxp")]
unique_name_in_owner = true
self_modulate = Color(0, 0, 1, 1)
layout_mode = 2
size_flags_horizontal = 3
attribute_color = Color(0, 0, 1, 1)

[node name="OtherAttributesGrid" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10
theme_override_constants/h_separation = 15
theme_override_constants/v_separation = 10
columns = 2

[node name="AttributeLabel5" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/OtherAttributesGrid" instance=ExtResource("2_xk3ex")]
layout_mode = 2
attribute_id = &"MaxMana"

[node name="AttributeLabel" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/OtherAttributesGrid" instance=ExtResource("2_xk3ex")]
layout_mode = 2
attribute_id = &"AttackPower"

[node name="AttributeLabel4" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/OtherAttributesGrid" instance=ExtResource("2_xk3ex")]
layout_mode = 2
attribute_id = &"MaxHealth"

[node name="AttributeLabel2" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/OtherAttributesGrid" instance=ExtResource("2_xk3ex")]
layout_mode = 2
attribute_id = &"DefensePower"

[node name="AttributeLabel3" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/LeftPanel/OtherAttributesGrid" instance=ExtResource("2_xk3ex")]
layout_mode = 2
attribute_id = &"Speed"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SkillsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/SkillsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "技能列表"

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/SkillsContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="SkillsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/SkillsContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2

[node name="StatusEffectsContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/StatusEffectsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "状态效果"

[node name="StatusContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ContentContainer/RightPanel/StatusEffectsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 4
